# Hermes

./: README.md
Cryptomotor/: Test  Test.hi  Test.hs  Test2.hs  testp.py
Cryptomotor/hcryptomotor/: CHANGELOG.md  decryptText  encryptText  hcryptomotor.cabal  signature  stack.yaml
Cryptomotor/hcryptomotor/.stack-work/: stack.sqlite3
Cryptomotor/hcryptomotor/.stack-work/ghci/48ef4350/: cabal_macros.h
Cryptomotor/hcryptomotor/.stack-work/ghci/8a3e6d93/: cabal_macros.h
Cryptomotor/hcryptomotor/.stack-work/install/x86_64-linux-tinfo6/0ede982d3f8e41d7cefbca13c6f922878b5a782887477c6d0108f39e91a3b7a1/8.10.7/pkgdb/: hcryptomotor-0.1.0.0-1ORmtHxjhbaI14Yk8SUnsw.conf  hcryptomotor-0.1.0.0-1cGVmuTM3DGKzZsFXtEff7.conf  hcryptomotor-0.1.0.0-5r6tuF19SXBClWOMafWOXm.conf  hcryptomotor-0.1.0.0-BsfOmzr0xCg3xqA5nOdFPE.conf  hcryptomotor-0.1.0.0-FjxPYV6y8QQ1ORVOJ0m0Ro.conf  hcryptomotor-0.1.0.0-K3GJ7FYBvFHGQXHKYsk3px.conf  hcryptomotor-0.1.0.0-K4h5c3EWiX188kFYec8mOd.conf  package.cache
Cryptomotor/hcryptomotor/.stack-work/install/x86_64-linux-tinfo6/c6b836c3399ff15def323bc166823b55a7e52f998a2f8e161f7017e5621b115e/8.10.7/pkgdb/: hcryptomotor-0.1.0.0-4HNP6Ag5R5IUUH0TIFEQ6.conf  package.cache
Cryptomotor/hcryptomotor/app/: Decrypt.hs  Encrypt.hs  GenerateKey.hs  Main.hs  Main.hs.copy  Sign.hs  Verify.hs  test.hs
Cryptomotor/hcryptomotor/bins/: hcryptomotor  hcryptomotor-decrypt  hcryptomotor-encrypt  hcryptomotor-genkey  hcryptomotor-sign copy  hcryptomotor-verify  rsa-prv.key  rsa-pub.key  sha384sum
Cryptomotor/hcryptomotor/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Cryptomotor/hcryptomotor/src/: MyLib.hs  RSAHelper.hs  RSALib.hs
Cryptomotor/hcryptomotor/test/: MyLibTest.hs
Cryptomotor/hcryptomotor/test/testfiles/: msgPrueba.txt
Cryptomotor/pwrapper/: cryptomotor.py  rsa-prv.key  rsa-pub.key
frontend/: index.html  menu.html  signup.html  verificado.html
frontend/resources/css/: index.css  menu.css
