cabal-version:      2.4
name:               hcryptomotor
version:            0.1.0.0
synopsis: A fast implementation of multi-digital signing with web interface using python-haskell.
homepage:           https://github.com/kaledcorona/hermes
bug-reports:     https://github.com/kaledcorona/hermes
license:            GPL-3.0-only
license-file:       LICENSE
author:             kaco
maintainer:         imkaco+dev@kaco.dev
category:           Math
extra-source-files: CHANGELOG.md


library
    -- Modules exported by the library.
    exposed-modules:  RSAHelper

    -- Modules included in this library but not exported.
    -- other-modules:


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables


    -- Other library packages from which modules are imported.
    build-depends:
        base,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        utf8-string,
        memory,
        cryptonite,
        text

    -- Directories containing source files.
    hs-source-dirs:   src


    -- Modules exported by the library.
    exposed-modules:  RSALib

    -- Modules included in this library but not exported.
    -- other-modules:


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables


    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.14.3.0,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        memory,
        utf8-string,
        cryptonite,
        text,
        random


    -- Base language which the package is written in.
    default-language: Haskell2010


executable hcryptomotor
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        cryptonite,
        text,
        memory,
        utf8-string,
        random,
        optparse-generic,
        system-filepath,
        optparse-applicative,
        process,
        hcryptomotor

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

executable hcryptomotor-genkey
    -- .hs or .lhs file containing the Main module.
    main-is:          GenerateKey.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        cryptonite,
        text,
        memory,
        utf8-string,
        random,
        process,
        hcryptomotor

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010


executable hcryptomotor-encrypt
    -- .hs or .lhs file containing the Main module.
    main-is:          Encrypt.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        cryptonite,
        text,
        memory,
        random,
        utf8-string,
        optparse-generic,
        optparse-applicative,
        system-filepath,
        process,
        hcryptomotor

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

executable hcryptomotor-decrypt
    -- .hs or .lhs file containing the Main module.
    main-is:          Decrypt.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        system-filepath,
        cryptonite,
        text,
        memory,
        random,
        optparse-generic,
        optparse-applicative,
        process,
        utf8-string,
        hcryptomotor

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

executable hcryptomotor-sign
    -- .hs or .lhs file containing the Main module.
    main-is:          Sign.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        cryptonite,
        text,
        system-filepath,
        memory,
        random,
        process,
        optparse-generic,
        optparse-applicative,
        utf8-string,
        hcryptomotor

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

executable hcryptomotor-verify
    -- .hs or .lhs file containing the Main module.
    main-is:          Verify.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    default-extensions:
        BangPatterns
        NumericUnderscores
        BinaryLiterals
        NoImplicitPrelude
        DeriveGeneric
        ScopedTypeVariables

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        bytestring,
        tuple,
        cryptonite,
        text,
        system-filepath,
        memory,
        random,
        process,
        optparse-applicative,
        optparse-generic,
        utf8-string,
        hcryptomotor

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010


    

test-suite hcryptomotor-test
    -- Base language which the package is written in.
    default-language: Haskell2010

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          MyLibTest.hs

    -- Test dependencies.
    build-depends:    base ^>=4.14.3.0,
    base ^>=4.14.3.0,
        rio,
        unliftio,
        conduit,
        conduit-extra,
        aeson,
        aeson-pretty,
        attoparsec,
        attoparsec-binary,
        text,
        crypto-api ^>=0.13.1,
        bytestring,
        curve25519 ^>=0.2.6,
        utf8-string,
        hcryptomotor

